unpackaged/objects/copado__Data_Change_Event__e.object
<CustomObject>
	<fields>
		<fullName>copado__Base_Object__c</fullName>
		<label>Base Object</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Old_Value__c</fullName>
		<label>Old Value</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Record_ID__c</fullName>
		<description>Base Object&apos;s record Instance Id</description>
		<label>Record ID</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Subscriber_Code__c</fullName>
		<label>Subscriber Code</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Triggering_Action__c</fullName>
		<description>Insert, Update, Delete, Undelete</description>
		<label>Triggering Action</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<label>Copado Data Change Event</label>
	<pluralLabel>Copado Data Change Events</pluralLabel>
</CustomObject>